tests/ui/consts/const-eval/partial_ptr_overwrite.stderr
error[E0080]: unable to overwrite parts of a pointer in memory at ALLOC0
  --> $DIR/partial_ptr_overwrite.rs:7:9
   |
LL |         *(ptr as *mut u8) = 123;
   |         ^^^^^^^^^^^^^^^^^^^^^^^ evaluation of constant value failed here
   |
   = help: this code performed an operation that depends on the underlying bytes representing a pointer
   = help: the absolute address of a pointer is not known at compile-time, so such operations are not supported

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
